syntax="proto3";
option csharp_namespace ="Discount.Grpc";
package discount;

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	rpc GetDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc GetDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc GetDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message CreateDiscountModel {
	int32 id= 1;
	string productName =2;
	string descriotion= 3;
	int32 amount =4;
}

message GetDiscountRequest {
	string productName =1;
}
message CreateDiscountRequest {
	CouponModel coupon =1;
}
message UpdateDiscountRequest {
	string productName=1;
}
message DeleteDiscountResponse {
	bool success =1;
}